--- a/templates/b2b-email-list.html
+++ b/templates/b2b-email-list.html
@@ -71,7 +71,7 @@
             contacts is not only unfulfilling but unforgivingly detrimental to your time and budget. </p>
           <p style="text-align:Justify;">By partnering with Affluence Business Inc, those worries won’t be shoveling you
             into a corner. Our <strong>B2B Email Lists</strong> house isochronally-appended and <a
-              href="/data-enrichment-services/" title="Enriched Data"><strong>enriched data</strong></a>. Therefore,
+              href="#" title="Enriched Data"><strong>enriched data</strong></a>. Therefore,
             your business marketing strategies can hit the road to success with our pre-verified mailing lists, sans
             obstacles. </p>
 
@@ -554,7 +554,7 @@
             from Affluence Business Inc</h2>
           <p style="text-align:Justify;">In Stephen. R. Covey’s words, “The key is in not spending time, but investing
             in it”. The same formula applies to resources, and in this case, B2B email lists. Thus, the key to achieving
-            masterstrokes of marketing wins is to invest in <a href="/email-lists"
+            masterstrokes of marketing wins is to invest in <a href="#"
               title="Premium Mailing Databases"><strong>premium mailing databases</strong></a> that enhance the
             likelihood of your B2B sales leads.</p>
           <p style="text-align:Justify;">The right data compilations can engineer long-standing relationships with A1
