--- a/templates/data-append/b2c-email-appending.html
+++ b/templates/data-append/b2c-email-appending.html
@@ -44,7 +44,7 @@
                             <li>Most marketers have their <strong>b2c customer data</strong> in non-digital format which makes it very cumbersome to access</li>
                         </ul>
                         <p>So what's the way out? The answer lies in <strong>b2c email append service</strong> from Affluence Business Inc! An exclusive, result oriented service offered, that ensures that obsolete marketing databases get updated with fresh
-                            and <a href="/email-lists/" title="Marketing Databases"><strong>deliverable email addresses</strong></a>, simply by matching it with an in-house master database through manual and automated
+                            and <a href="#/" title="Marketing Databases"><strong>deliverable email addresses</strong></a>, simply by matching it with an in-house master database through manual and automated
                             processes.
                         </p>
                         <p><strong>Fill in the gaps in your database, with our niche appending services:</strong></p>
