--- a/templates/data-append/contact-appending.html
+++ b/templates/data-append/contact-appending.html
@@ -113,7 +113,7 @@
                         <p>Appending contacts from the same company gives you a good advantage. You get to contact the desired contact and also get a good source of engagement within the same company. This amplifies your efforts multi-fold. It also helps
                             you get to people who are new to your business, opening new doors and creating new opportunities. When you have run a <strong>contact append</strong> on your dataset, it increases your campaign scope and directly affects your
                             deliverability and in-turn, you gain a higher ROI. The positive aspects of <strong>contact appending</strong> are many.</p>
-                        <p>Sign up for our <strong>contact appending services</strong> and improve the effectiveness of your marketing campaigns. All you need to do is give us your <a href="/email-lists" title="Email Database">email database</a>                            and we will give you the appended list in less than 7 business days.</p>
+                        <p>Sign up for our <strong>contact appending services</strong> and improve the effectiveness of your marketing campaigns. All you need to do is give us your <a href="#" title="Email Database">email database</a>                            and we will give you the appended list in less than 7 business days.</p>
                         <p><strong>Fill in the gaps in your database, with our niche appending services:</strong></p>
                         <div class="row sicon">
                             <div class="col-lg-4 mb-4 ">
