--- a/templates/data-intelligence.html
+++ b/templates/data-intelligence.html
@@ -71,7 +71,7 @@
                         <div class="col-lg-4 wow fadeInLeft">
                             <h3 class="normal-head-green"><a href="/list-management/" title="List Management">List Management</a></h3>
                             <ul class="space-list ml-0">
-                                <li><a href="/email-lists/" alt="Email Lists" title="Email Lists">Email Lists</a></li>
+                                <li><a href="#/" alt="Email Lists" title="Email Lists">Email Lists</a></li>
                                 <li><a href="/list-building/" alt="List Building" title="List Building">List Building</a></li>
                             </ul>
                         </div>
