--- a/templates/email-appending.html
+++ b/templates/email-appending.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-lg-7 section-fpad wow fadeInLeft mb-sec">
                     <h2 class="subhead-small-blk mb-sec">Revamp and Reactivate Your Database by Availing Our Email Appending Solutions</h2>
-                    <p style="text-align:Justify;">Business expansion through B2B email marketing is impossible without having the right email addresses in hand. If you opt for <strong>email appending services</strong> by partnering with us - we will revamp your <a href="/email-lists/"
+                    <p style="text-align:Justify;">Business expansion through B2B email marketing is impossible without having the right email addresses in hand. If you opt for <strong>email appending services</strong> by partnering with us - we will revamp your <a href="#"
                             title="Email Database"><strong>email database</strong></a> in minimum time to market and provide you with the latest email address data of your targeted decision makers and marketing professionals.</p>
                     <p style="text-align:Justify;">The future of B2B marketing communication seems to be immensely bright. Several trends such as globalization, continuous investments in research and development, newer techniques of multi-channel communication, product proliferation,
                         and audience engagement through personalized content are the key drivers for B2B markers in <a href="/lead-generation/" title="Lead Generation"><strong>lead generation</strong></a>.</p>
@@ -449,7 +449,7 @@
                                         <div id="collapseeight" class="collapse" aria-labelledby="headingeight" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <p>Companies often collect raw customer information of their clients such as phone numbers, emails, or addresses. This data is verified to remove incorrect data to make it error free and then matched with our
-                                                    master file. We then add only opt-in data to the email list. We then send a welcome mail to check the deliverability of the data. It is then sent to your <a href="/email-lists/">email address</a>                                                    for you to download. </p>
+                                                    master file. We then add only opt-in data to the email list. We then send a welcome mail to check the deliverability of the data. It is then sent to your <a href="#">email address</a>                                                    for you to download. </p>
                                             </div>
                                         </div>
                                     </div>
@@ -476,7 +476,7 @@
                                         </div>
                                         <div id="collapseten" class="collapse" aria-labelledby="headingten" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p><strong>Email Appending</strong> follows a very simple principle of using known customer data and searching the corresponding <a href="/email-lists/">email list</a> from
+                                                <p><strong>Email Appending</strong> follows a very simple principle of using known customer data and searching the corresponding <a href="#s/">email list</a> from
                                                     the vendors database. This essentially revamps the customers existing list and boosts B2B mailing databases and campaign returns.</p>
                                             </div>
                                         </div>
