--- a/templates/footer.html
+++ b/templates/footer.html
@@ -26,7 +26,7 @@
                         <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a><br /> <strong>Phone :</strong><a href="tel:307-213-7098">307-213-7098</a>                            </p>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
-                        <p> </br><br /> <strong></strong><a href="tel:307-213-7098"></a>307-213-7098 </p>
+                        <p> </br><br /> <strong></strong><a href="tel:307-213-7098"></a> </p>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Affluence Business Inc Logo"></a> </div>
                     <div class="col-lg-8 col-md-8 mt-4 footer-contact">
