--- a/templates/geo-targeted-lists.html
+++ b/templates/geo-targeted-lists.html
@@ -133,7 +133,7 @@
                             business has its limitations and marketers need to design campaigns to cater to regional,
                             national and global audiences. And when you want to expand and explore opportunities in
                             unexplored markets, you need to start with <a
-                                href="/email-lists"
+                                href="#"
                                 title="Targeted Email Lists">targeted email lists</a>.</p>
                         <p style="text-align:Justify;">With the business email addresses of Geo-targeted professionals
                             we aid marketers to connect with executives from across the UK, Europe, APAC, Canada and
