--- a/templates/geo-targeted-lists/australia-business-email-list.html
+++ b/templates/geo-targeted-lists/australia-business-email-list.html
@@ -907,7 +907,7 @@
                     <p>Our data scientists will identify the ideal leads from our global master database via proper
                         verification and vetting. Only the genuinely interested leads will make the cut whereas even the
                         lukewarm ones will be wiped off. Your marketing campaigns will yield high response rates as a
-                        result. Then, your <a href="/email-lists"
+                        result. Then, your <a href="#"
                             title="Email Database"><strong>email database</strong></a> will be delivered in the format
                         of your choice.</p>
                     <p>We will ensure that your <strong>Australia Business Email List</strong> covers important data
