--- a/templates/geo-targeted-lists/canada-business-email-list.html
+++ b/templates/geo-targeted-lists/canada-business-email-list.html
@@ -34,7 +34,7 @@
                          <p>Put an end to unresponsive email campaigns by choosing Affluence Business Inc Canada Business
                               Email List. Our <strong>Canadian Email List</strong> gives you access to potential clients
                               who are already scouting the marketing for the products and services you are selling.</p>
-                         <p>And, why only use our <a href="/email-lists"
+                         <p>And, why only use our <a href="#"
                                    title="Targeted Email Lists"><strong>targeted email lists</strong></a> to convert
                               prospects! Leverage said contact ids to deliver exceptional customer service as well as
                               product updates. A business email list is equally useful for staying in touch with loyal
@@ -407,7 +407,7 @@
                          <p>Know that we employ advanced <a href="/data-profiling"
                                    title="Data Profling"><strong>data profiling</strong></a> procedures such as
                               cleansing, appending, <a
-                                   href="/data-enrichment-services"
+                                   href="#"
                                    title="Data Enrichment"><strong>data enriching</strong></a>, and much more. Since we
                               assure high-deliverability rates, all your marketing teams now have to do, is craft a
                               great email marketing pitch.</p>
