--- a/templates/geo-targeted-lists/uk-business-email-list.html
+++ b/templates/geo-targeted-lists/uk-business-email-list.html
@@ -455,7 +455,7 @@
                         business communication with your targeted audience and keep them engaged. We have developed an
                         extensive database with contact details of over 30 million business executives in USA. Marketers
                         and vendors can now reap better business returns through increased <a
-                            href="/email-lists" title="B2B Sales Leads"><strong>B2B
+                            href="#" title="B2B Sales Leads"><strong>B2B
                                 Sales Leads</strong></a>.</p>
                     <p style="text-align:Justify;">We value our clients and ensure the <strong>List of
                             Businesses</strong> in USA exceeds your expectations. The data includes complete contact
@@ -516,7 +516,7 @@
                         leads in the international market. It is known for the authenticity and accuracy of the data we
                         provide. USA Business Mailing Lists are regularly updated to give you current and reliable
                         contact details of businesses in USA. Most companies are relying on our <a
-                            href="/email-lists" title="Email Lists"><strong>email
+                            href="#" title="Email Lists"><strong>email
                                 lists</strong></a> as it assures high returns on investments. Our business lists
                         facilitates easy communication through multi-channel campaigning for marketers and customers
                         spread across geographies. USA is home to multiple industries and organizations, and with our
@@ -647,7 +647,7 @@
                         business needs. We are in touch with reliable sources across countries that can provide relevant
                         contact data of your targeted audience. Therefore it is now convenient to get accurate and
                         verified data at affordable rates. We at <a
-                            href="/email-lists"
+                            href="#"
                             title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> understand how
                         important business contact lists are to companies. Therefore to make things easier, we have
                         built a unique platform to launch campaigns, create market presence, and to get qualified sales
