--- a/templates/geo-targeted-lists/usa-business-email-list.html
+++ b/templates/geo-targeted-lists/usa-business-email-list.html
@@ -496,7 +496,7 @@
                         an extensive database with contact details of over 30 million
                         business executives in USA. Marketers and vendors can now reap
                         better business returns through increased
-                        <a href="/email-lists" title="B2B Sales Leads"><strong>B2B
+                        <a href="#" title="B2B Sales Leads"><strong>B2B
                                 Sales Leads</strong></a>.
                     </p>
                     <p style="text-align: Justify">
@@ -592,7 +592,7 @@
                         and accuracy of the data we provide. USA Business Mailing Lists are
                         regularly updated to give you current and reliable contact details
                         of businesses in USA. Most companies are relying on our
-                        <a href="/email-lists" title="Email Lists"><strong>email
+                        <a href="#" title="Email Lists"><strong>email
                                 lists</strong></a>
                         as it assures high returns on investments. Our business lists
                         facilitates easy communication through multi-channel campaigning for
@@ -806,7 +806,7 @@
                         countries that can provide relevant contact data of your targeted
                         audience. Therefore it is now convenient to get accurate and
                         verified data at affordable rates. We at
-                        <a href="/email-lists"
+                        <a href="#"
                             title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a>
                         understand how important business contact lists are to companies.
                         Therefore to make things easier, we have built a unique platform to
