--- a/templates/healthcare-lists.html
+++ b/templates/healthcare-lists.html
@@ -165,7 +165,7 @@
                             <strong>Healthcare Email List</strong> is your go-to option. Our database houses the most
                             extensive, triple-vetted, responsive insights that help you quickly converse with these
                             tough-to-reach professionals. How? Here’s how.</p>
-                        <p style="text-align:Justify;">Our <a href="/email-lists/"
+                        <p style="text-align:Justify;">Our <a href="#/"
                                 title="Mailing List"><strong>mailing list</strong></a> will equip you with intricate
                             contact details, whether it’s an organization or a medical professional. These will include
                             data fields about their name, mailing address, SIC code, ZIP code, employee size, revenue,
