--- a/templates/healthcare-lists/hospital-email-list.html
+++ b/templates/healthcare-lists/hospital-email-list.html
@@ -38,7 +38,7 @@
                     <p style="text-align:Justify;">The <strong>Hospital Email Database</strong> are updated regularly to
                         keep it highly deliverable and active for all marketing purposes. Over the years we have created
                         a reputed name for ourselves for our healthcare email lists in the healthcare industry. We make
-                        sure the <a href="/email-lists"
+                        sure the <a href="#"
                             title="Email Lists"><strong>email lists</strong></a> bring high response rate, lowers the
                         cost of marketing and improves sales. The <strong>Hospital Contact List</strong> helps you
                         connect with healthcare professionals from locations such as Canada, US, UK, and many more
