--- a/templates/healthcare-lists/nurses-email-list.html
+++ b/templates/healthcare-lists/nurses-email-list.html
@@ -336,7 +336,7 @@
                         work with doctors and they are connected with healthcare decision makers at their workplace. We
                         also understand the importance of verified <strong>Nurse Email Database</strong> as nurses are
                         too busy to attend to unsolicited communication. Keeping this in mind we provide an exhaustive
-                        and responsive <a href="/email-lists"
+                        and responsive <a href="#"
                             title="Mailing List"><strong>mailing list</strong></a> of registered nurses that can assist
                         in global campaigns and help brands reap the desired business results.</p>
                     <p style="text-align:Justify;">Besides, leading nurse practitioners are professionally associated
