--- a/templates/index.html
+++ b/templates/index.html
@@ -105,16 +105,16 @@
                 <div id="logo" class="pull-left"> <a href="/" alt="Affluence Business Inc" title="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" alt="Affluence Business Inc Logo"></a> </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class="menu-has-children"><a href="/company-overview">Company</a>
+                        <li class="menu-has-children"><a href="#">Company</a>
                             <ul>
                                 <li><a href="/about-us/">About Us</a></li>
 
                             </ul>
                         </li>
-                        <li class="menu-has-children"><a href="/email-lists/">Our Data</a>
+                        <li class="menu-has-children"><a href="#">Our Data</a>
                             <ul>
                                 <li><a href="/total-addressable-market"><img src="/static/assets/img/Total-Addressable-Market.png" alt="Total-Addressable-Market">&nbsp;Total Addressable Market</a></li>
-                                <li><a href="/b2b-email-list"><img src="/static/assets/img/B2B-Sales-Leads.png" alt="B2B-Sales-Leads">&nbsp;B2B Sales Leads</a></li>
+                                <li><a href="/b2b-email-list/"><img src="/static/assets/img/B2B-Sales-Leads.png" alt="B2B-Sales-Leads">&nbsp;B2B Sales Leads</a></li>
 <!--                                <li><a href="/database/investors-email-list"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Investors emaillist">&nbsp;Investors Email List</a></li>-->
                                 <li
                                     class="menu-has-children"><a href="/technology-lists/"><img src="/static/assets/img/Technology-Data.png" alt="Technology-Data">&nbsp;Technology Data</a>
@@ -176,7 +176,7 @@
                         </li>
                         </ul>
                         </li>
-                        <li class="menu-has-children"><a href="/data-enrichment-services/">Enhance</a>
+                        <li class="menu-has-children"><a href="#">Enhance</a>
                             <ul>
                                 <li><a href="/email-appending/">Email Append</a></li>
                                 <li><a href="/data-appending/">Data Append</a></li>
@@ -729,10 +729,10 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">United States</strong>
-                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a><br /> <strong>Phone :</strong>
+                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a><br /> <strong>Phone :</strong>307-213-7098
                     </div>
                     <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
-                        <p> </br><br /> <strong></strong>
+                        <p> </br> <strong></strong>
                             <a href="tel:307 213 7098"></a>
                          </p>
                     </div>
