--- a/templates/industry-wise-lists.html
+++ b/templates/industry-wise-lists.html
@@ -389,7 +389,7 @@
                             impeccable data. We are just trying to reduce rather than share your workload of gathering
                             the right data to leverage your services to the right target audience. As data forms the
                             foundation to build your business, our <a
-                                href="/email-lists/"><strong>email list</strong></a> of
+                                href="#/"><strong>email list</strong></a> of
                             several industries provides result-oriented records to help you grow at a great pace.</p>
                         <p style="text-align:Justify;">We aspire to make your marketing efforts count with our
                             geo-targeted services of business and can also provide data on executives from across the
