--- a/templates/industry-wise-lists/automotive-industry-email-list.html
+++ b/templates/industry-wise-lists/automotive-industry-email-list.html
@@ -299,7 +299,7 @@
           <h2 class="subhead-small-blk mb-sec">Our Automotive Industry Mailing List Helps You to Reach Targeted Audience
           </h2>
           <p style="text-align:Justify;">Businesses and professionals using this application in a range of industries
-            are included in our list. This <a href="/email-lists"
+            are included in our list. This <a href="#"
               title="Email Lists"><strong>mailing list/email list</strong></a> offers one of the most recently updated
             and largest databases in the globe.<br> <br> <strong>Our Mailing Lists are Focused at Enhancing the
               Company’s B2B Campaigns</strong></p>
