--- a/templates/industry-wise-lists/banking-and-finance-industry-email-list.html
+++ b/templates/industry-wise-lists/banking-and-finance-industry-email-list.html
@@ -36,7 +36,7 @@
                         bankers, and much more. Affluence Business Inc guarantees a 95% deliverance rate, powering
                         marketers with pre-packaged and sales-ready data. </p>
                     <p style="text-align:Justify;">Your business can effectively enhance sales revenue and enrich CRM in
-                        less time. Besides, our <a href="/email-lists"
+                        less time. Besides, our <a href="#"
                             title="Email Lists"><strong>email lists</strong></a> offer updated and verified lead
                         information. If capturing the right audiences is the task, consider it done with our
                         data-intensive B2B mailing database. Run effectual campaigns on multiple channels, including
