--- a/templates/industry-wise-lists/manufacturing-industries-email-list.html
+++ b/templates/industry-wise-lists/manufacturing-industries-email-list.html
@@ -33,7 +33,7 @@
             from Affluence Business Inc lets you do just that. </p>
           <p align="justify">Affluence Business Inc' manufacturing industry mailing list is a comprehensive database of
             relevant decision-makers and industry professionals to help you pitch your product or service to the right
-            audience. With an updated and verified <a href="/email-lists"
+            audience. With an updated and verified <a href="#"
               target="_blank">email list</a>, you can interact with manufacturing industry experts, managers, buyers,
             operators, and more. </p>
           <p align="justify">Our team of data experts works tirelessly to collect and clean data from several ethical
