--- a/templates/industry-wise-lists/oil-and-gas-industry-email-list.html
+++ b/templates/industry-wise-lists/oil-and-gas-industry-email-list.html
@@ -353,7 +353,7 @@
                          <h3 class="subhead-small-blk">Four Main Sub-lists Offered</h3>
                          <p style="text-align:Justify;">Affluence Business Inc will provide you with Oil and Gas Industry email
                               lists that are accurately sourced, well documented, highly responsive, and frequently
-                              updated. Our <a href="/email-lists"
+                              updated. Our <a href="#"
                                    title="Targeted Email Lists"><strong>targeted email lists</strong></a> are flexible
                               and can be molded to suit any marketing strategy you choose to apply.</p>
                          <p style="text-align:Justify;"><strong>Our Oil and Gas Industry Mailing Database Contains the
