--- a/templates/phone-appending.html
+++ b/templates/phone-appending.html
@@ -106,7 +106,7 @@
                         <h2 class="subhead-small-blk">Get phone numbers of your customers and prospects by effectively using Telephone Appending Services</h2>
                         <p>Have you amassed a bunch of postal addresses and wish you had telephone numbers for them as well? Do you know where to look when you want to <strong>append relevant phone numbers</strong> to these records? Affluence Business Inc'
                             <strong>Phone Appending</strong> adds phone numbers and helps in connecting better to your customers and prospects. </p>
-                        <p>For any telemarketing campaign to be successful, you need an <a href="/email-lists" title="Email List"><strong>accurate email list</strong></a> that connects you with prospects.</p>
+                        <p>For any telemarketing campaign to be successful, you need an <a href="#" title="Email List"><strong>accurate email list</strong></a> that connects you with prospects.</p>
                         <p>Affluence Business Inc enhances your existing <strong>database by appending</strong> missing phone numbers and replacing wrong phone numbers with updated ones. More importantly, it is also ensured that none of these phone numbers
                             are on the ‘Do Not Call’ registry. </p>
                         <p>We cater to a variety of industries globally and our <strong>phone append</strong> line of services provides you with access to the largest repository of phone numbers that are thoroughly verified to deliver excellent result to
