--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -83,8 +83,8 @@
                         our website and email alerts.</p>
                     <h3 class="normal-head">2. Disclosure and/or Sharing of Personal Information</h3>
                     <p style="text-align:Justify;"><strong>2.1.</strong>Affluence Business Inc reserves full ownership
-                        over the information collected on this domain <a href="https://www.affluencebusiness.com"
-                                                                         title="affluence business">(https://www.affluencebusiness.com)</a>
+                        over the information collected on this domain <a href="www.affluencebizdata.com"
+                                                                         title="affluence business">(https://www.affluencebizdata.com)</a>
                         and its subsidiaries. The said information is collected from reputed sources (Section 1.2) and
                         from different points in the said domain and its sub-domains. We will not sell, share, and/or
                         rent the said data to third-party vendor(s) in other ways than disclosed as below:</p>
@@ -169,8 +169,8 @@
                     </ul>
                     <p style="text-align:Justify;">To exercise any of the rights listed above, please email us at <a
                             href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com </a>or write to us at
-                        the following address: Affluence Business Inc, 297 Kingsbury Grade, Suite 100, Stateline, NV
-                        89449.</p>
+                        the following address: Affluence Business Inc, 1309 COFFEEN AVENUE STE 1200 SHERIDAN, WY 82801
+                        </p>
                     <p style="text-align:Justify;"><strong>Please note:</strong> We cannot always delete records of all
                         historical data, and this is in compliance to legal audits and financial reporting purposes.</p>
 <!--                    <p>-->
