--- a/templates/professional-lists.html
+++ b/templates/professional-lists.html
@@ -185,7 +185,7 @@
                             highly-relevant C-level executives email list.</p>
                         <p style="text-align:Justify;">That’s where our expertly-collated professional contact database
                             shines. Comprising 100% ethically-collected customer data from globally credible sources,
-                            our <a href="/email-lists"><strong>mailing
+                            our <a href="#"><strong>mailing
                                     database</strong></a> ensures that you receive genuine contact details and not waste
                             an ounce of your resources. With a highly-affordable, one-time investment, you access all
                             the necessary tools to bag in the top decision-makers of companies all across the USA! </p>
@@ -330,7 +330,7 @@
                             <p style="text-align:Justify;">Your campaigns are exclusive and what you do today will help
                                 you in carving a better tomorrow. So don't hesitate to do what's right for you.
                                 Data-driven marketing is in, and the right <a
-                                    href="/email-lists"
+                                    href="#"
                                     title="B2B Mailing List"><strong>B2B Mailing List</strong></a> will ensure that your
                                 marketing messages are reaching the right professionals. So take this step to improve
                                 deliverables and returns. Buy business email addresses of C-Level Executives today!</p>
@@ -351,7 +351,7 @@
                                 waste, and if your strategies are directed towards the wrong one, even the best
                                 marketing tactic will fail. Employ our professional email list to tackle this aptly.</p>
                             <p style="text-align:Justify;">Through our <a
-                                    href="/email-lists"
+                                    href="#"
                                     title="Email Database"><strong>email database</strong></a>, you can access intricate
                                 details such as full name, company size, revenue, employee size, ROI, SIC code, physical
                                 location, ZIP code, and many more. These 100% accurate data fields will help you seal
