--- a/templates/professional-lists/ceo-email-list.html
+++ b/templates/professional-lists/ceo-email-list.html
@@ -28,7 +28,7 @@
                             (CEO) of a company. But, as a marketer, you are painfully aware of how challenging it can be to get access to one.</p>
                         <p style="text-align:Justify;">Have your marketing efforts been failing lately? Tired of having more scars than trophies? Well, though it is natural for busy CEOs to guard their time, you’d be surprised how willing and welcoming they are of marketing conversations
                             that matter. The question is - Are you reaching out to the right professionals with the right message? </p>
-                        <p style="text-align:Justify;">Your only hope is to have a <a href="/email-lists" title="Targeted Email Lists"><strong>targeted email list</strong></a> under your belt that connects you directly with the CEOs of your target
+                        <p style="text-align:Justify;">Your only hope is to have a <a href="#" title="Targeted Email Lists"><strong>targeted email list</strong></a> under your belt that connects you directly with the CEOs of your target
                             industry. And since procurement and maintenance of such a <a href="/"><strong>professionals email</strong></a> is a time-consuming and painstaking task, it is best to relay
                             such needs to the data experts of Affluence Business Inc!</p>
                         <h2 class="subhead-small-blk">Customize your CEO Email Database List by</h2>
