--- a/templates/professional-lists/cto-email-list.html
+++ b/templates/professional-lists/cto-email-list.html
@@ -251,9 +251,9 @@
                                    and segmented data to help brands achieve unmatched campaign success. The well
                                    curated and exhaustive data sets ensure that marketers gain the competitive edge. It
                                    helps B2B campaigns reap the desired business results. That is not all; the <a
-                                        href="/email-appending"
+                                        href="/email-appending/"
                                         title="Email Appending Services"><strong>email appending services</strong></a>
-                                   and <a href="/data-enrichment-services"
+                                   and <a href="#"
                                         title="Data Enrichment Services"><strong>data enrichment services</strong></a>
                                    ensures that your data health is well maintained, in a cost-effective way.</p>
                               <div class="mt-4"> <a href="/request-quote"
@@ -294,7 +294,7 @@
                     </div>
                </div>
                <p style="text-align:Justify;">There are many reasons <a
-                         href="/email-lists/"
+                         href="#/"
                          title="why investing in an email list"><strong>why investing in an email list</strong></a> is a
                     good business decision. The <strong>CTO email address list</strong> is a comprehensive <a
                          href="/b2b-email-list/"
