--- a/templates/professional-lists/loan-officer-email-list.html
+++ b/templates/professional-lists/loan-officer-email-list.html
@@ -31,7 +31,7 @@
                         Services’ Loan Officer Email List will assist you in getting deep data insights for attracting
                         new business opportunities.</p>
                     <p style="text-align:Justify;">Our USA Loan Officer email database is available as location-based <a
-                            href="/email-lists"
+                            href="#"
                             title="Targeting Email Lists"><strong>targeting email lists</strong></a> as well.
                         Geo-targeted mailing lists enable you to channelize your marketing efforts in areas of your
                         choice. So, you get equipped with relevant data insights, which will make your marketing efforts
