--- a/templates/technology-lists.html
+++ b/templates/technology-lists.html
@@ -47,7 +47,7 @@
                     <p style="text-align:Justify;">Globally acclaimed brands like Apple, IBM and Microsoft have been
                         ruling the roost by providing feature-rich applications for the smooth functioning of business
                         processes. A dedicated team of researchers at <a
-                                href="/email-lists"
+                                href="#"
                                 title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> provides a
                         comprehensive, well-researched and validated technology mailing list that covers the wide
                         spectrum of business technologies including MSQL, NetApp, WebEx, BigData, MS Azure and more.</p>
