--- a/templates/technology-lists/crm-users-list.html
+++ b/templates/technology-lists/crm-users-list.html
@@ -364,11 +364,11 @@
 		
 			<h2 class="subhead-small-blk">Meet your Prospecting Objectives with Data-driven and Result-oriented Approach</h2>
 			 <p style="text-align:Justify;">Cookie-cutter approaches may work with cookies, but they never will when it comes to a premium <strong>CRM Users Email List</strong>. We at Affluence Business Inc understand that your unique business needs data that is accurate and designed to meet its goals like a glove. We customize our CRM users datasets and also ensure that they are 100% accurate and 95% deliverable at the most competitive prices. </p>
-			 <p style="text-align:Justify;">Moreover, we regularly update our <a href="/email-lists" title="Email Database"><strong>email database</strong></a> to remove obsolete, redundant, and inaccurate data. Thus, ensuring that the data you receive always stays relevant and current. Also, since your database will be permission-based, you need not fear the silent treatment from the other end! </p>
+			 <p style="text-align:Justify;">Moreover, we regularly update our <a href="#" title="Email Database"><strong>email database</strong></a> to remove obsolete, redundant, and inaccurate data. Thus, ensuring that the data you receive always stays relevant and current. Also, since your database will be permission-based, you need not fear the silent treatment from the other end! </p>
 			
 			
 			
-            <p style="text-align:Justify;">With email lists, <a href="/data-enrichment-services" title="Data Enrichment"><strong>data enrichment</strong></a>, and <a href="/email-appending" title="Email Append Services"><strong>email append services</strong></a> from Affluence Business Inc, you can increase the effectiveness of your marketing campaigns and watch your business soar to greater heights. Get in touch with us today!</p>
+            <p style="text-align:Justify;">With email lists, <a href="#" title="Data Enrichment"><strong>data enrichment</strong></a>, and <a href="/email-appending" title="Email Append Services"><strong>email append services</strong></a> from Affluence Business Inc, you can increase the effectiveness of your marketing campaigns and watch your business soar to greater heights. Get in touch with us today!</p>
 		</div>
 		
 		
