--- a/templates/technology-lists/erp-users-list.html
+++ b/templates/technology-lists/erp-users-list.html
@@ -271,7 +271,7 @@
                             companies that use ERP.
                         </p>
                         <p style="text-align:Justify;">The market is rife with opportunities to market to the most
-                            qualified <a href="/email-lists" title="Sales leads">sales
+                            qualified <a href="#" title="Sales leads">sales
                                 leads</a>. However, the early bird catches the worm, right? Affluence Business Inc will
                             help you stay ahead of your competitors at every turn!</p>
                     </div>
